--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,10 @@
 	<string name="file_not_exits">文件不存在</string>
     <string name="delete">删除</string>
     <string name="select_all">全选</string>
+	<string name="rename">重命名</string>
+    <string name="please_input_filename">请输入新名称</string>
+    <string name="rename_failed">重命名失败</string>
+    <string name="sure_delete">确定要删除吗</string>
+    <string name="share_to">分享到</string>
 
 </resources>
