--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,5 @@
 	<string name="help_developer">帮助开发者</string>
 	<string name="reward_reason">本开发团队致力于开发无广告、无推送、纯净的录屏应用。\n无任何盈利的应用很难开发维护下去，</string>
 
+	<string name="about_us">关于我们</string>
 </resources>
