--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
 	<string name="app_description">Welcome to use ScreenRecord. \n If you have any comments or suggestions, please let us know on the feedback page. We will deal with them in time and give you a reply. \n Thank you for your support!</string>
 	<string name="search">Search</string>
 	<string name="video_edit">Video Edit</string>
-    <string name="jianqie">EditVideo</string>
+        <string name="jianqie">EditVideo</string>
+	<string name="need_overlay_permission">Screen recording requires suspended window privileges</string>
 
 </resources>
