--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -64,4 +64,13 @@
 	<string name="video_edit">视频编辑</string>
 	<string name="jianqie">视频编辑</string>
 	<string name="need_overlay_permission">屏幕录制需要悬浮窗权限</string>
+	<string name="select_edit_type">点击右上角菜单选择编辑方式</string>
+	<string name="preview">预览</string>
+	<string name="clip">剪切</string>
+	<string name="select_picture">选择图片</string>
+	<string name="insert">插入</string>
+	<string name="choose_video_to_save">选择一段视频保留</string>
+	<string name="choose_video_to_delete">选择一段视频删除</string>
+	<string name="background">背景</string>
+	<string name="choose_img_as_bg">更改视频背景</string>
 </resources>
